--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: just-the-docs
+theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-mentions
 
