--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: phpdbg
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/phpdbg-docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
