--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: phpdbg
-baseurl: "/phpdbg-docs" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "/phpdbg-docs" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: just-the-docs
+# theme: just-the-docs
 remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-mentions
